# pede

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: build.yml
ffmpeg/windows/: start_ffplay.ps1  start_rstp_server.ps1
src/: buildings.rs  config.rs  env.rs  main.rs  radar.rs  radar_cam.rs  render_to_texture.rs  stream.rs  ui.rs
testclient/ConsoleApp1/: ConsoleApp1.sln
testclient/ConsoleApp1/ConsoleApp1/: Program.cs
