[package]
name = "pede"
version = "0.1.0"
edition = "2021"
default-run = "pede"

[dependencies]
bevy = "0.16.0"
bevy_egui = "0.34.1"
bevy_panorbit_camera = "0.26.0"
rand = "0.9.1"  
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"

[profile.dev.package."*"]
opt-level = 3