[package]
name = "pede"
version = "0.1.0"
edition = "2021"
default-run = "pede"

[dependencies]
bevy = "0.17.2"
bevy_egui = "0.38.0"
bevy_panorbit_camera = "0.31.0"
rand = "0.9.2"  
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.8"

[profile.dev.package."*"]
opt-level = 3